# django-steamboat

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment-dev.yml  environment.yml  justfile  manage.py  pyproject.toml
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
steamboat/: conftest.py
steamboat/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
steamboat/sample/: admin.py  models.py
steamboat/sample/migrations/: 0001_initial.py
steamboat/sequence/: admin.py  apps.py  models.py
steamboat/sequence/migrations/: 0001_initial.py
steamboat/templates/: base.html
steamboat/users/: adapters.py  apps.py  models.py  views.py
steamboat/users/api/: serializers.py  views.py
steamboat/users/migrations/: 0001_initial.py
steamboat/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
